# festivout-backend

./: Cargo.toml
migrations/: 20240309173547_setup.down.sql  20240309173547_setup.up.sql  20240309173846_create_table_users.up.sql
src/: main.rs
