[package]
name = "festivout-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
hyper = { version = "1.2.0", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
] }
dotenv = "0.15.0"

[dev-dependencies]
tower = "0.4.13"
serde_json = "1.0.114"
